Improve user CRUD
